--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     job:
       enabled: false
   datasource:
-    url: jdbc:postgresql://centos8s-1/springbatch
-    username: user
-    password: pass
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    sql-script-encoding: UTF-8
 
